# pkg/api/types.gen.go
@@ -3,23 +3,63 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.1-0.20240601101045-cb61b77eea50 DO NOT EDIT.
 package api
 
+// Defines values for AuthorizeParamsResponseType.
+const (
+	Code AuthorizeParamsResponseType = "code"
+)
+
+// Defines values for AuthorizeParamsScope.
+const (
+	Openid AuthorizeParamsScope = "openid"
+)
+
 // OpenIDConfigurationResponseSchema defines model for OpenIDConfigurationResponseSchema.
 type OpenIDConfigurationResponseSchema struct {
-	// AuthorizationEndpoint http://localhost:8787/op/authorize
+	// AuthorizationEndpoint http://localhost:8787/authorize
 	AuthorizationEndpoint string `json:"authorization_endpoint"`
 
-	// Issuer http://localhost:8787/op
+	// Issuer http://localhost:8787
 	Issuer string `json:"issuer"`
 
-	// JwksUri http://localhost:8787/op/certs
+	// JwksUri http://localhost:8787/certs
 	JwksUri string `json:"jwks_uri"`
 
-	// RevocationEndpoint http://localhost:8787/op/revoke
+	// RevocationEndpoint http://localhost:8787/revoke
 	RevocationEndpoint string `json:"revocation_endpoint"`
 
-	// TokenEndpoint http://localhost:8787/op/token
+	// TokenEndpoint http://localhost:8787/token
 	TokenEndpoint string `json:"token_endpoint"`
 
-	// UserinfoEndpoint http://localhost:8787/op/userinfo
+	// UserinfoEndpoint http://localhost:8787/userinfo
 	UserinfoEndpoint string `json:"userinfo_endpoint"`
+}
+
+// AuthorizeParams defines parameters for Authorize.
+type AuthorizeParams struct {
+	// ResponseType response_type
+	ResponseType AuthorizeParamsResponseType `form:"response_type" json:"response_type"`
+
+	// ClientId client_id
+	ClientId string `form:"client_id" json:"client_id"`
+
+	// RedirectUri http://localhost:8080/callback
+	RedirectUri *string `form:"redirect_uri,omitempty" json:"redirect_uri,omitempty"`
+
+	// Scope openid
+	Scope *AuthorizeParamsScope `form:"scope,omitempty" json:"scope,omitempty"`
+
+	// State state
+	State *string `form:"state,omitempty" json:"state,omitempty"`
+}
+
+// AuthorizeParamsResponseType defines parameters for Authorize.
+type AuthorizeParamsResponseType string
+
+// AuthorizeParamsScope defines parameters for Authorize.
+type AuthorizeParamsScope string
+
+// LoginViewParams defines parameters for LoginView.
+type LoginViewParams struct {
+	// Id id
+	Id string `form:"id" json:"id"`
 }
